2004-12-03  Thomas Wood <thos@gnome.org>, Andrew Johnson <ajgenius@ajgenius.us>

	* Makefile.am:
	* configure.ac:
	* engines/Makefile.am:
	* engines/redmond/*:

	New redmond engine added

	* redmond95/Theme/.cvsignore:
	* redmond95/Theme/Makefile.am:
	* redmond95/Theme/README.html:
	* redmond95/Theme/gtk-2.0/.cvsignore:
	* redmond95/Theme/gtk-2.0/Makefile.am:
	* redmond95/Theme/gtk-2.0/gtkrc:
	
	Old redmond engine removed

	* themes/Makefile.am:
	* themes/Redmond/Makefile.am:
	* themes/Redmond/gtk-2.0/Makefile.am:
	* themes/Redmond/gtk-2.0/gtkrc:

	Theme files for new redmond engine

2004-12-01  Thomas Wood <thos@gnome.org>, Andrew Johnson <ajgenius@ajgenius.us>

	* Update version to 2.5
	* Remove pixbuf and notif engines, and misc other files
	* Move crux, hc, industrial, mist, thinice engines over from 
	  gnome-themes and gnome-themes-extras
	* Replace configure.in with configure.ac

2004-11-02  James Henstridge  <james@jamesh.id.au>

	From bug #156666:

	* configure.in: modernise the configure script a bit.

	* autogen.sh: use automake 1.9, 1.8 or 1.7 instead of 1.4.

Wed May 28 10:26:48 2003  Owen Taylor  <otaylor@redhat.com>

	* README: Fix typo of ~/.theme for ~/.themes

Tue Apr 22 12:14:16 2003  Owen Taylor  <otaylor@redhat.com>

	* README: Fix 'copy copy' typo.

2003-03-02  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Call AC_LIBTOOL_WIN32_DLL. Set OS_WIN32
	conditional on Windows.

	* makefile.cygwin: Remove, unmaintained and obsolete.

	* Makefile.am (EXTRA_DIST): Remove here, too.

	* README.win32: Update.

Fri Jan 17 19:02:02 2003  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.2.0 ===

	* Makefile.am: Make dist fixes.

	* gtk-engines.spec: Some updates to bring into a
	resemblence of workingness.

	* NEWS: Updated.

Fri Jan 17 18:32:34 2003  Owen Taylor  <otaylor@redhat.com>

	* configure.in Makefile.am gtk-engines-2.pc.in: Patch
	from Seth Nickell to add a .pc file so that things use
	one of the gtk-engines engines can check for it's